--- a/src/styles/articles.css
+++ b/src/styles/articles.css
@@ -14,6 +14,14 @@
     overflow: visible;
 }
 
+.buckless-card-image__price {
+    background-color: #2ecc71;
+    border-bottom-right-radius: 1px;
+    color: #fff;
+    padding: 2px 5px;
+    position: absolute;
+    z-index: 5;
+}
 
 .buckless-card-image .buckless-card-image__background::after {
     content: ' ';
