--- a/src/app.scss
+++ b/src/app.scss
@@ -3,6 +3,7 @@
 html, body {
     font-family: 'Roboto', sans-serif;
     height: 100%;
+    margin: 0;
     width: 100%;
 }
 
@@ -12,6 +13,10 @@ html, body {
 
 button, input, optgroup, select, textarea {
     font-family: 'Roboto', sans-serif !important;
+}
+
+input, textarea, keygen, select, button {
+    font-size: 16px;
 }
 
 #app {
