--- a/src/main.scss
+++ b/src/main.scss
@@ -8,6 +8,7 @@ $black: #222;
 
 @mixin modal($width) {
     background-color: #fff;
+    border: 1px solid rgba($black, 0.5);
     border-radius: 2px;
     box-shadow: 0 0 4px rgba($black, 0.5);
     left: 50%;
