chore: add postcss (#112)

--- a/src/app.css
+++ b/src/app.css
@@ -1,4 +1,4 @@
-@import 'main';
+@import './main.css';
 
 html, body {
     font-family: 'Roboto', sans-serif;
@@ -20,7 +20,7 @@ input, textarea, keygen, select, button {
 }
 
 #app {
-    color: $black;
+    color: var(--black);
     display: flex;
     flex-direction: column;
     height: 100%;
