fix: unselectable anything

--- a/src/app/app.css
+++ b/src/app/app.css
@@ -9,6 +9,7 @@ html, body {
 
 *, *:after, *:before {
     box-sizing: border-box;
+    user-select: none;
 }
 
 button, input, optgroup, select, textarea {
