--- a/src/app/main.css
+++ b/src/app/main.css
@@ -12,7 +12,7 @@
     background-color: #fff;
     border: 1px solid rgba(34, 34, 34, .5);
     border-radius: 2px;
-    box-shadow: 0 0 4px rgba(34, 34, 34, .5);
+    box-shadow: 0 2px 4px rgba(34, 34, 34, .3);
     left: 50%;
     margin-left: calc(-1 * $width / 2);
     position: absolute;
